[package]
name = "hydroperx-lateformat"
version = "1.0.1"
edition = "2021"
authors = ["hydroperx <hydroperfox@gmail.com>"]
repository = "https://github.com/hydroperx/lateformat.rs"
license = "Apache-2.0"
description = "Late formatting of string parameters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.0.1"
maplit = "1.0.2"